# NDT

./: README.md  main.py  pyproject.toml
app/: ingest.py  main.py  models.py  processor.py
tests/: test_api.py
